[package]
name = "rustified"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name ="starry night"
path = "src/graphics/starry_night.rs"

[[bin]]
name = "snake"
path = "src/graphics/snake.rs"

[dependencies]
rand = "0.8.4"
colored = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
indicatif = "0.17.0"
ctrlc = "3.2.2"
signal-hook = "0.3.4"
nix = "0.28.0"
piston_window = "0.131.0"
piston = "0.55.0"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.84.0"
bevy = { version = "0.13.2", features = ["default"] }


# Enable max optimizations for dependencies, but not for our code:
# To make Bevy not run slow as hell
[profile.dev.package."*"]
opt-level = 3
